--- a/mainsite/templates/mainsite/home.html
+++ b/mainsite/templates/mainsite/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <!-- Image Carousel -->
-    {% include 'welcome/carousel.html' %}
+    {% include 'mainsite/welcome/carousel.html' %}
     <!-- End Image Carousel -->
 
     <!-- nav template -->
@@ -51,7 +51,7 @@
                                 <i><img src="{% static 'img/icons/origin_96px.png' %}" alt=""></i>
                             </div>
                             <div class="squareContent">
-                                <h2><a href="{% url 'origin_scripts' %}">Origin Scripts</a></h2>
+                                <h2><a href="{% url 'mainsite:origin_scripts' %}">Origin Scripts</a></h2>
                                 <p>There is an issue with EA's Origin, where Origin will steal focus from your game (which can cause all kinds of issues).<br>
                                 This is caused by an issue within specific files within Origin.<br>
                                 These scripts remove the files (so far, no negative effect) and launch Origin, thus preventing the issue.</p>
@@ -66,7 +66,7 @@
                                 <i><img src="{% static 'img/icons/powershell_96px.png'%}" alt=""></i>
                             </div>
                             <div class="squareContent">
-                                <h2><a href="{% url 'user_env_script' %}">User Environment</a></h2>
+                                <h2><a href="{% url 'mainsite:user_env_script' %}">User Environment</a></h2>
                                 <p>To make launching programs more effective and easier (such as just typing the name of the exe), you can modify the
 user environmental variable. Though this can be done manually, this script should make the process just a bit easier.</p>
                             </div>
@@ -86,8 +86,6 @@ user environmental variable. Though this can be done manually, this script shoul
 	    <p>For now, please leave comments on the YouTube Videos as I build out the rest of this page.</p>
         </div>
     </div>
-    <script>
-        console.log(navigator.userAgent)
-    </script>
+
 {% endblock %}
 
