--- a/mainsite/templates/mainsite/origin_scripts.html
+++ b/mainsite/templates/mainsite/origin_scripts.html
@@ -56,6 +56,6 @@
 		</div>
 	</div>
 
-    <script src="{% static '/js/copyCodeBlock.js' %}"></script>
+    <script src="{% static 'js/copyCodeBlock.js' %}"></script>
     <br>
 {% endblock content %}
