--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -3,9 +3,15 @@
 {% block content %}
     <h2>Login</h2>
     <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-ack">Log In</button>
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" name="username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" name="password">
+        </div>
+        <button class="btn btn-ack">Log In</button>
     </form>
-
 {% endblock content %}
