--- a/mainsite/templates/mainsite/home.html
+++ b/mainsite/templates/mainsite/home.html
@@ -1,91 +1,131 @@
-{% extends 'base.html' %}
 {% load static %}
-{% block content %}
-    <!-- Image Carousel -->
-    {% include 'mainsite/welcome/carousel.html' %}
-    <!-- End Image Carousel -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple IT Tools {% block title %} {% endblock title %}</title>
 
-    <!-- nav template -->
-    {% include 'navbar/nav.html' %}
-    <!-- nav template -->
+    <link rel="stylesheet" href="{% static 'css/superslides.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-	<!-- import about section -->
-    <div id="about" class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-7">
-                    <h4>Welcome to Simple IT Tools</h4>
-                    <p>This is my personal site, and an extension of my YouTube Channel - <a href="https://www.youtube.com/channel/UCgrHE26dDBcG0xrE6Z6gCWA/" target="blank">Games Tech and Geekdom</a></p>
-                    <p>The Goal of this site, is to focus on simple solutions to technology.<br>
-					The goal of the YouTube Channel is to explore and share all the geeky things I enjoy.</p>
+
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="{% static 'js/vue2-6-12.js' %}"></script>
+</head>
+<body>
+    <div class="wrapper">
+        <div class="content-wrap">
+            <!-- Image Carousel -->
+            {% include 'mainsite/welcome/carousel.html' %}
+            <!-- End Image Carousel -->
+
+            <!-- nav template -->
+            {% include 'navbar/nav.html' %}
+            <!-- nav template -->
+
+            <!-- import about section -->
+            <div id="about" class="section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7">
+                            <h4>Welcome to Simple IT Tools</h4>
+                            <p>This is my personal site, and an extension of my YouTube Channel - <a href="https://www.youtube.com/channel/UCgrHE26dDBcG0xrE6Z6gCWA/" target="blank">Games Tech and Geekdom</a></p>
+                            <p>The Goal of this site, is to focus on simple solutions to technology.<br>
+                            The goal of the YouTube Channel is to explore and share all the geeky things I enjoy.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-	<!-- import YouTube section -->
-	    <div id="youtube" class="youtubeComponent scrollMarker section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h2 class="embeddedVideo"><a href="https://www.youtube.com/channel/UCgrHE26dDBcG0xrE6Z6gCWA/" target="_blank">Games Tech and Geekdom - YouTube</a></h2>
-                </div>
-                <div class="col-md-12 text-center">
-                	<div class="iframeContainer">
-                		<iframe class="responsive-iframe" src="https://www.youtube.com/embed/6P9dRXzNB8k" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                	</div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-	<!-- import Scripts Component -->
-	    <div id="scripts" class="scriptsComponent section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-12">
-                    <div class="squareItem">
-                        <div class="squareInnerContainer">
-                            <div class="squareIcon">
-                                <i><img src="{% static 'img/icons/origin_96px.png' %}" alt=""></i>
-                            </div>
-                            <div class="squareContent">
-                                <h2><a href="{% url 'mainsite:origin_scripts' %}">Origin Scripts</a></h2>
-                                <p>There is an issue with EA's Origin, where Origin will steal focus from your game (which can cause all kinds of issues).<br>
-                                This is caused by an issue within specific files within Origin.<br>
-                                These scripts remove the files (so far, no negative effect) and launch Origin, thus preventing the issue.</p>
+            <!-- import YouTube section -->
+                <div id="youtube" class="youtubeComponent scrollMarker section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 text-center">
+                            <h2 class="embeddedVideo"><a href="https://www.youtube.com/channel/UCgrHE26dDBcG0xrE6Z6gCWA/" target="_blank">Games Tech and Geekdom - YouTube</a></h2>
+                        </div>
+                        <div class="col-md-12 text-center">
+                            <div class="iframeContainer">
+                                <iframe class="responsive-iframe" src="https://www.youtube.com/embed/6P9dRXzNB8k" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12">
-                    <div class="squareItem">
-                        <div class="squareInnerContainer">
-                            <div class="squareIcon">
-                                <i><img src="{% static 'img/icons/powershell_96px.png'%}" alt=""></i>
+            </div>
+
+
+            <!-- import Scripts Component -->
+                <div id="scripts" class="scriptsComponent section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-12">
+                            <div class="squareItem">
+                                <div class="squareInnerContainer">
+                                    <div class="squareIcon">
+                                        <i><img src="{% static 'img/icons/origin_96px.png' %}" alt=""></i>
+                                    </div>
+                                    <div class="squareContent">
+                                        <h2><a href="{% url 'mainsite:origin_scripts' %}">Origin Scripts</a></h2>
+                                        <p>There is an issue with EA's Origin, where Origin will steal focus from your game (which can cause all kinds of issues).<br>
+                                        This is caused by an issue within specific files within Origin.<br>
+                                        These scripts remove the files (so far, no negative effect) and launch Origin, thus preventing the issue.</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="squareContent">
-                                <h2><a href="{% url 'mainsite:user_env_script' %}">User Environment</a></h2>
-                                <p>To make launching programs more effective and easier (such as just typing the name of the exe), you can modify the
-user environmental variable. Though this can be done manually, this script should make the process just a bit easier.</p>
+                        </div>
+                        <div class="col-md-6 col-sm-12">
+                            <div class="squareItem">
+                                <div class="squareInnerContainer">
+                                    <div class="squareIcon">
+                                        <i><img src="{% static 'img/icons/powershell_96px.png'%}" alt=""></i>
+                                    </div>
+                                    <div class="squareContent">
+                                        <h2><a href="{% url 'mainsite:user_env_script' %}">User Environment</a></h2>
+                                        <p>To make launching programs more effective and easier (such as just typing the name of the exe), you can modify the
+        user environmental variable. Though this can be done manually, this script should make the process just a bit easier.</p>
+                                    </div>
+                                </div>
                             </div>
+                        </div>
+
                         </div>
                     </div>
                 </div>
 
+            <!-- import Contact Component -->
+                <div id="contact" class=" contactSection section">
+                <div class="col-md-12 text-center">
+
+                    <h2>I'd love to hear from you</h2>
+                <p>For now, please leave comments on the YouTube Videos as I build out the rest of this page.</p>
                 </div>
             </div>
         </div>
-
-    <!-- import Contact Component -->
-    	<div id="contact" class=" contactSection section">
-        <div class="col-md-12 text-center">
-
-            <h2>I'd love to hear from you</h2>
-	    <p>For now, please leave comments on the YouTube Videos as I build out the rest of this page.</p>
-        </div>
+        <footer id="footer">
+            <div class="copyrightSection">
+                <div class="col-md-12 text-center">
+                    <p>&copy;2020 Copyright Ryan Mooney</p>
+                </div>
+            </div>
+        </footer>
     </div>
+{#    <a href="{% url 'login' %}" id="loginhidden"></a>#}
 
-{% endblock %}
+    <script src="{% static 'js/jquery.superslides.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+{#    <script src="{% static 'js/tracking.js' %}"></script>#}
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/authAccess.js' %}"></script>
+
+
+</body>
+</html>
+
 
