--- a/templates/navbar/nav.html
+++ b/templates/navbar/nav.html
@@ -32,19 +32,19 @@
                 <a class="nav-link" href="{% url 'mainsite:home' %}#youtube">YouTube Channel</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'mainsite:home' %}#scripts">Scripts</a>
+                <a class="nav-link" href="{% url 'devarea:home' %}#scripts">Dev Area</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'mainsite:home' %}#contact">Contact</a>
             </li>
         </ul>
-{#        {% if user.is_authenticated %}#}
-{#            <ul class="navbar-nav ml-auto">#}
-{#                <li class="nav-item dropdown">#}
-{#                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-{#                        {{ user.username }}#}
-{#                    </a>#}
-{#                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">#}
+        {% if user.is_authenticated %}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{ user.username }}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 {#                        {% if user.profile.id %}#}
 {#                            <a href="{% url 'profile' user.profile.id %}" class="dropdown-item">View Profile</a>#}
 {#                            <a href="{% url 'profile_edit' user.profile.id %}" class="dropdown-item">Edit Profile</a>#}
@@ -54,10 +54,14 @@
 {##}
 {#                        <a href="{% url 'edit_settings' %}" class="dropdown-item">Edit Settings</a>#}
 {#                        <a href="{% url 'invite_user' %}" class="dropdown-item">Invite User</a>#}
-{#                        <a href="{% url 'logout' %}" class="dropdown-item">Log Out</a>#}
-{#                    </div>#}
-{#                </li>#}
-{#            </ul>#}
-{#        {% endif %}#}
+                        <a href="{% url 'logout' %}" class="dropdown-item">Log Out</a>
+                    </div>
+                </li>
+            </ul>
+        {% else %}
+            <li class="navbar-nav ml-auto">
+                <a href="{% url 'login' %}" class="nav-link">Login</a>
+            </li>
+        {% endif %}
     </div>
 </nav>
