--- a/templates/navbar/nav.html
+++ b/templates/navbar/nav.html
@@ -31,8 +31,16 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'mainsite:home' %}#youtube">YouTube Channel</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'devarea:home' %}#scripts">Dev Area</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dev Area
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'devarea:home' %}">All Items</a>
+                    <a class="dropdown-item" href="#scripts">Most Recent</a>
+                </div>
+
+
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'mainsite:home' %}#contact">Contact</a>
