--- a/templates/navbar/nav.html
+++ b/templates/navbar/nav.html
@@ -12,9 +12,9 @@
                     <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown">Blog</a>
                     <div class="dropdown-menu">
                         <a href="{% url 'blog:home' %}" class="dropdown-item">Blog</a>
-                        <a href="{% url 'blog:add' %}" class="dropdown-item">Add Post</a>
-{#                        <div class="dropdown-divider"></div>#}
-{#                        <a href="{% url 'add_category' %}" class="dropdown-item">Add Category</a>#}
+                        <a href="{% url 'blog:blog_add' %}" class="dropdown-item">Add Post</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="{% url 'blog:category_add' %}" class="dropdown-item">Add Category</a>
 {#                        <a href="{% url 'category_list' %}" class="dropdown-item">Categories</a>#}
 
                     </div>
@@ -37,7 +37,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'devarea:home' %}">All Items</a>
-                    <a class="dropdown-item" href="#scripts">Most Recent</a>
+                    <a class="dropdown-item" href="{% url 'mainsite:home' %}#scripts">Most Recent</a>
                 </div>
 
 
