--- a/templates/navbar/nav.html
+++ b/templates/navbar/nav.html
@@ -13,9 +13,9 @@
                     <div class="dropdown-menu">
                         <a href="{% url 'blog:home' %}" class="dropdown-item">Blog</a>
                         <a href="{% url 'blog:blog_add' %}" class="dropdown-item">Add Post</a>
-{#                        <div class="dropdown-divider"></div>#}
-{#                        <a href="{% url 'blog:category_add' %}" class="dropdown-item">Add Category</a>#}
-{#                        <a href="{% url 'category_list' %}" class="dropdown-item">Categories</a>#}
+                        <div class="dropdown-divider"></div>
+                        <a href="{% url 'blog:category_add' %}" class="dropdown-item">Add Category</a>
+                        <a href="{% url 'blog:category_list' %}" class="dropdown-item">Categories</a>
 
                     </div>
                 </li>
