--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
     {% else %}
         {% for post in object_list %}
             <h5 class="blog_item"><a href="{% url 'blog:blog_detail' post.pk %}" class="blog_item">{{ post.title }}</a></h5>
-            <small><a href="">{{ post.category }}</a></small>
+            <small><a href="{% url 'blog:category_list' %}">{{ post.category }}</a></small>
             <small>Published on: {{ post.post_date }}</small>
             <small>
                 {% if user.id == post.author_id %}
