--- a/devarea/templates/devarea/home.html
+++ b/devarea/templates/devarea/home.html
@@ -10,13 +10,13 @@
         <p>There are is no software to show.</p>
     {% else %}
         {% for app in object_list %}
-            <h5 class="blog_item"><a href="" class="blog_item">{{ app.app_name }}</a></h5>
+            <h5 class="blog_item"><a href="{% url 'devarea:app' app.pk %}" class="blog_item">{{ app.app_name }}</a></h5>
             <small><a href="#">{{ app.app_type }}</a></small>
             <small>Published on: {{ app.post_date }}</small>
             <small>
                 {% if user.id == app.author_id %}
-                    <a href="#"><img src="{% static 'img/icons/edit_80px.png' %}" alt="" class="user_widget"></a>
-                    <a href="#"><img src="{% static 'img/icons/delete_bin_80px.png' %}" alt="" class="user_widget"></a>
+                    <a href="{% url 'devarea:dev_edit' app.pk %}"><img src="{% static 'img/icons/edit_80px.png' %}" alt="" class="user_widget"></a>
+                    <a href="{% url 'devarea:dev_delete' app.pk %}"><img src="{% static 'img/icons/delete_bin_80px.png' %}" alt="" class="user_widget"></a>
                 {% endif %}
 
                 </small>
